--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Open+Sans&display=swap" rel="stylesheet">
+    <link rel="import" href="index2.html">
 </head>
 <body class="homePage">
     <nav role="navigation">
     <main role="main">
         <ul>
-            <li>
-                <a>Portfolio</a>
+            <li></li>
+                <a href="index2.html">Portfolio</a>
             </li>
             <li>
                 <a>Github</a>
