--- a/index2.html
+++ b/index2.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Portfolio</title>
+    <title>My Project</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=EB+Garamond|Oswald&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
     <body class="projectPage">
         <nav role="navigation">
+
             <ul class="nav-links">
                 <li><a href="index.html">About Me</a></li>
                 <li><a href="https://github.com/jennantran/">Github</a></li>
@@ -23,11 +25,11 @@
         </header>
         
         <section class="explore">
-            <h2 class="exploreHeader">Explore through my code. &#8595;</h2>
+            <h2 class="exploreHeader">Explore through my code. <u>Click here</u> to go &#8595;</h2>
         </section> 
        
         <section class="projects">
-            <img src="Quiz App.png" alt="BTS Quiz App" class="quizScreenShot">
+            <img src="QuizApp.png" alt="BTS Quiz App" class="quizScreenShot">
             <div class="container2">
                 <h2 class="BTS">BTS Quiz App</h2>
             </div>
@@ -41,5 +43,6 @@
                     <li><a href="https://jennantran.github.io/quiz-app/" id="project">Live</a></li>
                  </ul>
         </section>
+        <script src="script.js"></script>
     </body> 
 </html>
