--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <li><a href="https://www.linkedin.com/in/jennantran/">LinkedIn</a></li>
             <li><a href="mailto:jennantran@gmail.com">Contact</a></li>
         </ul>
+        </div>
+     
+
     </nav>
     <header role="banner" class="backgroundAboutMe">
             <h1 class="bannerText">About Me.</h1>  
@@ -24,6 +27,7 @@
     </header>
     <section class="aboutMe">
         <div class="container">
+          
             <p> <strong>Jennifer Tran</strong>, here. I am a web developer in the bay area and a recent graduate from the Engineer Flex program at <strong>Thinkful.</strong> I enjoy
                 coding since I get to see my creating and problem-solving skills come to life 
                 in the form of an application or website. It is legitimately just like a puzzle game.
@@ -33,7 +37,12 @@
                 always striving to learn something new, every day. The tech industry is nothing, 
                 but short of it. 
             </p>
+
+            <div class="profile">
+                <img src="Profile.jpg" alt="My picture" class="profilePic">
+          </div class="profile">  
         </div>  
-    </section>    
+    </section>  
+
 </body>
 </html>
