added media queries

--- a/index.html
+++ b/index.html
@@ -6,22 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=EB+Garamond|Oswald&display=swap" rel="stylesheet">
     <link rel="link" href="index2.html">
 </head>
 <body>
-    <nav role="navigation">
+    <nav>
         <ul class="nav-links">
-            <li><a href="index2.html">Projects</a></li>
-            <li><a href="https://github.com/jennantran/">Github</a></li>
-            <li><a href="https://www.linkedin.com/in/jennantran/">LinkedIn</a></li>
-            <li><a href="mailto:jennantran@gmail.com">Contact</a></li>
+            <li><a href="index2.html" target="_blank">Projects</a></li>
+            <li><a href="https://github.com/jennantran/" target="_blank">Github</a></li>
+            <li><a href="https://www.linkedin.com/in/jennantran/" target="_blank">LinkedIn</a></li>
+            <li><a href="mailto:jennantran@gmail.com" target="_blank">Contact</a></li>
         </ul>
-        </div>
-     
 
     </nav>
-    <header role="banner" class="backgroundAboutMe">
+    <header class="backgroundAboutMe">
             <h1 class="bannerText">About Me.</h1>  
   
     </header>
@@ -30,9 +27,10 @@
           
             <p> <strong>Jennifer Tran</strong>, here. I am a web developer in the bay area and a recent graduate from the Engineer Flex program at <strong>Thinkful.</strong> I enjoy
                 coding since I get to see my creating and problem-solving skills come to life 
-                in the form of an application or website. It is legitimately just like a puzzle game.
-            </br>
-            </br>
+                in the form of an application or website. What enhances the fun in coding is working with a team of great programmers that can share their coding prowess. It is legitimately just like a group puzzle game.
+            <br>
+            <br>
+
                 Outside of coding, I enjoy hiking, meeting new people, and thrifting. I am 
                 always striving to learn something new, every day. The tech industry is nothing, 
                 but short of it. 
@@ -40,7 +38,7 @@
 
             <div class="profile">
                 <img src="Profile.jpg" alt="My picture" class="profilePic">
-          </div class="profile">  
+            </div>  
         </div>  
     </section>  
 
