--- a/index2.html
+++ b/index2.html
@@ -11,16 +11,16 @@
 </head>
 
     <body class="projectPage">
-        <nav role="navigation">
+        <nav>
 
             <ul class="nav-links">
-                <li><a href="index.html">About Me</a></li>
-                <li><a href="https://github.com/jennantran/">Github</a></li>
-                <li><a href="https://www.linkedin.com/in/jennantran/">LinkedIn</a></li>
-                <li><a href="mailto:jennantran@gmail.com">Contact</a></li>
+                <li><a href="index.html" target="_blank">About Me</a></li>
+                <li><a href="https://github.com/jennantran/" target="_blank">Github</a></li>
+                <li><a href="https://www.linkedin.com/in/jennantran/" target="_blank">LinkedIn</a></li>
+                <li><a href="mailto:jennantran@gmail.com" target="_blank">Contact</a></li>
             </ul>
         </nav>
-        <header role="banner" class="myProjects">
+        <header class="myProjects">
                 <h1 class="banner">my projects.</h1> 
         </header>
         
@@ -39,8 +39,8 @@
                 <p>BTS quiz app is a fun trivia for all the die-hard fans of the biggest <br>
                 boy band in the world.</p>
                 <ul>
-                    <li><a href="https://github.com/jennantran/quiz-app" id="project">GitHub</a></li>
-                    <li><a href="https://jennantran.github.io/quiz-app/" id="project">Live</a></li>
+                    <li><a href="https://github.com/jennantran/quiz-app" target="_blank" id="project">GitHub</a></li>
+                    <li><a href="https://jennantran.github.io/quiz-app/" target="_blank" id="project">Live</a></li>
                  </ul>
         </section>
         <script src="script.js"></script>
