--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <ul class="nav-links">
-            <li><a href="index2.html" target="_blank">Projects</a></li>
+            <li><a href="index2.html">Projects</a></li>
             <li><a href="https://github.com/jennantran/" target="_blank">Github</a></li>
             <li><a href="https://www.linkedin.com/in/jennantran/" target="_blank">LinkedIn</a></li>
             <li><a href="mailto:jennantran@gmail.com" target="_blank">Contact</a></li>
