--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,7 @@
         <nav>
 
             <ul class="nav-links">
-                <li><a href="index.html" target="_blank">About Me</a></li>
+                <li><a href="index.html">About Me</a></li>
                 <li><a href="https://github.com/jennantran/" target="_blank">Github</a></li>
                 <li><a href="https://www.linkedin.com/in/jennantran/" target="_blank">LinkedIn</a></li>
                 <li><a href="mailto:jennantran@gmail.com" target="_blank">Contact</a></li>
@@ -36,12 +36,15 @@
             <div class="icons">
                 <img src="btstechnologies.png" alt="BTS Technologies" id="icon">    
              </div>
-                <p>BTS quiz app is a fun trivia for all the die-hard fans of the biggest <br>
+             <div class="projectContainer">
+                <p>BTS quiz app is a fun trivia for all the die-hard fans of the biggest 
                 boy band in the world.</p>
+            </div>
                 <ul>
                     <li><a href="https://github.com/jennantran/quiz-app" target="_blank" id="project">GitHub</a></li>
                     <li><a href="https://jennantran.github.io/quiz-app/" target="_blank" id="project">Live</a></li>
                  </ul>
+               
         </section>
         <script src="script.js"></script>
     </body> 
