--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="link" href="index2.html">
+    <link rel="link" href="projects.html">
+    <link href="https://fonts.googleapis.com/css?family=EB+Garamond&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
         <ul class="nav-links">
-            <li><a href="index2.html">Projects</a></li>
+            <li><a href="projects.html">Projects</a></li>
             <li><a href="https://github.com/jennantran/" target="_blank">Github</a></li>
             <li><a href="https://www.linkedin.com/in/jennantran/" target="_blank">LinkedIn</a></li>
             <li><a href="mailto:jennantran@gmail.com" target="_blank">Contact</a></li>
@@ -25,14 +27,14 @@
     <section class="aboutMe">
         <div class="container">
           
-            <p> <strong>Jennifer Tran</strong>, here. I am a web developer in the bay area and a recent graduate from the Engineer Flex program at <strong>Thinkful.</strong> I enjoy
-                coding since I get to see my creating and problem-solving skills come to life 
+            <p> Hello, I am <strong>Jennifer Tran</strong>. I am a web developer in the bay area and a recent graduate from the Engineering Flex program at <strong>Thinkful.</strong> I enjoy
+                coding since I get to see my creative and problem-solving skills come to life 
                 in the form of an application or website. What enhances the fun in coding is working with a team of great programmers that can share their coding prowess. It is legitimately just like a group puzzle game.
             <br>
             <br>
 
                 Outside of coding, I enjoy hiking, meeting new people, and thrifting. I am 
-                always striving to learn something new, every day. The tech industry is nothing, 
+                always striving to learn something new, every day. The tech industry is nothing 
                 but short of it. 
             </p>
 
