update images path

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </p>
 
             <div class="profile">
-                <img src="Profile.jpg" alt="My picture" class="profilePic">
+                <img src="allImages/Profile.jpg" alt="My picture" class="profilePic">
             </div>  
         </div>  
     </section>  
