--- a/projects.html
+++ b/projects.html
@@ -30,12 +30,12 @@
         </section> 
        
         <section class="projects">
-            <img src="QuizApp.png" alt="BTS Quiz App" class="quizScreenShot">
+            <img src="allImages/QuizApp.png" alt="BTS Quiz App" class="quizScreenShot">
             <div class="container2">
                 <h2 class="BTS">BTS Quiz App</h2>
             </div>
             <div class="icons">
-                <img src="btstechnologies.png" alt="BTS Technologies" id="icon">    
+                <img src="allImages/btstechnologies.png" alt="BTS Technologies" id="icon">    
              </div>
              <div class="projectContainer">
                 <p>BTS quiz app is a fun trivia application for all the die-hard fans of the biggest 
