added cookEasy project

--- a/projects.html
+++ b/projects.html
@@ -47,6 +47,26 @@
                  </ul>
                
         </section>
+
+        <section class="CookEasy">
+            <img src="allImages/LandingPage.png" alt="CookEasy App" class="cookScreenShot">
+            <div class="container2">
+                <h2 class="BTS">CookEasy Recipe App</h2>
+            </div>
+            <div class="icons">
+                <img src="allImages/btstechnologies.png" alt="BTS Technologies" id="icon">    
+             </div>
+             <div class="projectContainer">
+                <p>CookEasy is an application with an archive of recipes. Users can search up recipes, 
+                    browse recipes by main ingredients, or browse recipes by cuisine.
+                </p>
+            </div>
+                <ul class="cookEasyLinks">
+                    <li><a href="https://github.com/jennantran/CookEasy/" target="_blank">GitHub</a></li>
+                    <li><a href="https://jennantran.github.io/CookEasy/" target="_blank">Live</a></li>
+                 </ul>
+        </section>
+
         <script src="script.js"></script>
     </body> 
 </html>
