add two projects

--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
                 <h2 class="BTS">CookEasy Recipe App</h2>
             </div>
             <div class="icons">
-                <img src="allImages/btstechnologies.png" alt="BTS Technologies" id="icon">    
+                <img src="allImages/btstechnologies.png" alt="Cook easy" id="icon">    
              </div>
              <div class="projectContainer">
                 <p>CookEasy is an application with an archive of recipes. Users can search up recipes, 
@@ -65,6 +65,48 @@
                     <li><a href="https://github.com/jennantran/CookEasy/" target="_blank">GitHub</a></li>
                     <li><a href="https://jennantran.github.io/CookEasy/" target="_blank">Live</a></li>
                  </ul>
+        </section>
+
+        <section class="LetsTourIt">
+            <img src="allImages/tourit.png" alt="TourIt App" class="tourScreenShot">
+            <img src="allImages/favorites.png" alt="TourIt App" class="tourScreenShot">
+            <img src="allImages/searchplaces.png" alt="TourIt App" class="tourScreenShot">
+            <div class="container2">
+                <h2 class="BTS">Lets Tour It</h2>
+            </div>
+            <div class="icons">
+                <img src="allImages/btstechnologies.png" alt="TourIt" id="icon"> 
+                <img src="allImages/react.png" alt="TourIt" id="icon">      
+             </div>
+             <div class="projectContainer">
+                <p>Lets Tour It app is an application where users can search up places near their current
+                    location. The user can favorite a place so that they can refer to it later.</p>
+            </div>
+                <ul class="tourLinks">
+                    <li><a href="https://github.com/jennantran/letstourit-app" target="_blank">GitHub</a></li>
+                    <li><a href="letstourit.jennantran.vercel.app" target="_blank">Live</a></li>
+                 </ul>          
+        </section>
+
+        <section class="motionLogs">
+            <img src="allImages/motion-homepage.png" alt="Motion Log App" class="motionScreenShot">
+            <img src="allImages/logs.png" alt="Motion Log App" class="motionScreenShot">
+            <img src="allImages/calories.png" alt="Motion Log App" class="motionScreenShot">
+            <div class="container2">
+                <h2 class="BTS">Motion Logs</h2>
+            </div>
+            <div class="icons">
+                <img src="allImages/btstechnologies.png" alt="motionLog" id="icon">    
+                <img src="allImages/react.png" alt="motionLog" id="icon">  
+             </div>
+             <div class="projectContainer">
+                <p>Motion Logs is an application to help you achieve your fitness goals. It logs 
+                    workouts by rep, sets, and weights while providing a search engine to look up calories expended.</p>
+            </div>
+                <ul class="motionLinks">
+                    <li><a href="https://github.com/jennantran/motionlogs-app" target="_blank">GitHub</a></li>
+                    <li><a href="https://motionlogs-app.vercel.app/" target="_blank">Live</a></li>
+                 </ul>          
         </section>
 
         <script src="script.js"></script>
