update link for tour app

--- a/projects.html
+++ b/projects.html
@@ -84,7 +84,7 @@
             </div>
                 <ul class="tourLinks">
                     <li><a href="https://github.com/jennantran/letstourit-app" target="_blank">GitHub</a></li>
-                    <li><a href="letstourit.jennantran.vercel.app" target="_blank">Live</a></li>
+                    <li><a href="https://letstourit.jennantran.vercel.app" target="_blank">Live</a></li>
                  </ul>          
         </section>
 
