update quiz app link

--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
             </div>
                 <ul>
                     <li><a href="https://github.com/jennantran/quiz-app" target="_blank">GitHub</a></li>
-                    <li><a href="https://jennantran.github.io/quiz-app/" target="_blank">Live</a></li>
+                    <li><a href="http://jt-thinkful.surge.sh/" target="_blank">Live</a></li>
                  </ul>
                
         </section>
