--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
                 <h2 class="BTS">BTS Quiz App</h2>
             </div>
             <div class="icons">
-                <img src="allImages/btstechnologies.png" alt="BTS Technologies" id="icon">    
+                <img src="allImages/btstechnologies.png" alt="BTS Technologies" id="iconQuiz">    
              </div>
              <div class="projectContainer">
                 <p>BTS quiz app is a fun trivia application for all the die-hard fans of the biggest 
@@ -54,7 +54,7 @@
                 <h2 class="BTS">CookEasy Recipe App</h2>
             </div>
             <div class="icons">
-                <img src="allImages/btstechnologies.png" alt="Cook easy" id="icon">    
+                <img src="allImages/btstechnologies.png" alt="Cook easy" id="iconCook">    
              </div>
              <div class="projectContainer">
                 <p>CookEasy is an application with an archive of recipes. Users can search up recipes, 
@@ -75,7 +75,7 @@
                 <h2 class="BTS">Lets Tour It</h2>
             </div>
             <div class="icons">
-                <img src="allImages/btstechnologies.png" alt="TourIt" id="icon"> 
+                <img src="allImages/btstechnologies.png" alt="TourIt" id="iconTour"> 
                 <img src="allImages/react.png" alt="TourIt" id="icon">      
              </div>
              <div class="projectContainer">
@@ -96,7 +96,7 @@
                 <h2 class="BTS">Motion Logs</h2>
             </div>
             <div class="icons">
-                <img src="allImages/btstechnologies.png" alt="motionLog" id="icon">    
+                <img src="allImages/btstechnologies.png" alt="motionLog" id="iconMotion">    
                 <img src="allImages/react.png" alt="motionLog" id="icon">  
              </div>
              <div class="projectContainer">
