--- a/projects.html
+++ b/projects.html
@@ -38,8 +38,8 @@
                 <img src="allImages/btstechnologies.png" alt="BTS Technologies" id="iconQuiz">    
              </div>
              <div class="projectContainer">
-                <p>BTS quiz app is a fun trivia application for all the die-hard fans of the biggest 
-                boy band in the world.</p>
+                <p>BTS quiz app is a trivia application for all the die-hard fans of the biggest 
+                boy band in the world. As an avid fan, myself, I wanted other fans to test their BTS knowledge.</p>
             </div>
                 <ul>
                     <li><a href="https://github.com/jennantran/quiz-app" target="_blank">GitHub</a></li>
@@ -58,7 +58,8 @@
              </div>
              <div class="projectContainer">
                 <p>CookEasy is an application with an archive of recipes. Users can search up recipes, 
-                    browse recipes by main ingredients, or browse recipes by cuisine.
+                    browse recipes by main ingredients, or browse recipes by cuisine. It's for the days where you 
+                    don't know what to cook. I come across this on a weekly basis.
                 </p>
             </div>
                 <ul class="cookEasyLinks">
@@ -80,7 +81,8 @@
              </div>
              <div class="projectContainer">
                 <p>Lets Tour It app is an application where users can search up places near their current
-                    location. The user can favorite a place so that they can refer to it later.</p>
+                    location. The user can favorite a place so that they can refer to it later. 
+                    Whenever traveling, I want to be able to know what places to visit on demand.</p>
             </div>
                 <ul class="tourLinks">
                     <li><a href="https://github.com/jennantran/letstourit-app" target="_blank">GitHub</a></li>
@@ -101,7 +103,8 @@
              </div>
              <div class="projectContainer">
                 <p>Motion Logs is an application to help you achieve your fitness goals. It logs 
-                    workouts by rep, sets, and weights while providing a search engine to look up calories expended.</p>
+                    workouts by rep, sets, and weights while providing a search engine to look up calories expended. 
+                    It helps fitness enthusiasts to hold accountability. </p>
             </div>
                 <ul class="motionLinks">
                     <li><a href="https://github.com/jennantran/motionlogs-app" target="_blank">GitHub</a></li>
