change react icon id

--- a/projects.html
+++ b/projects.html
@@ -77,7 +77,7 @@
             </div>
             <div class="icons">
                 <img src="allImages/btstechnologies.png" alt="TourIt" id="iconTour"> 
-                <img src="allImages/react.png" alt="TourIt" id="icon">      
+                <img src="allImages/react.png" alt="TourIt" id="reactIconTour">      
              </div>
              <div class="projectContainer">
                 <p>Lets Tour It app is an application where users can search up places near their current
@@ -99,7 +99,7 @@
             </div>
             <div class="icons">
                 <img src="allImages/btstechnologies.png" alt="motionLog" id="iconMotion">    
-                <img src="allImages/react.png" alt="motionLog" id="icon">  
+                <img src="allImages/react.png" alt="motionLog" id="reactIconMotion">  
              </div>
              <div class="projectContainer">
                 <p>Motion Logs is an application to help you achieve your fitness goals. It logs 
